--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 						<!-- <suiteXmlFile>${testngName}</suiteXmlFile> -->
 						<!-- then use below maven command -->
 						<!-- mvn test -DtestngName="name of your testng.xml file" -->
-						<suiteXmlFile>testng.xml</suiteXmlFile>
+						<suiteXmlFile>${testngName}</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
@@ -70,6 +70,16 @@
 			<groupId>com.aventstack</groupId>
 			<artifactId>extentreports</artifactId>
 			<version>4.0.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>4.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>4.1.1</version>
 		</dependency>
 
 	</dependencies>
